# sistemas

./: README.md
AWS_Cloud/: CLASE_PSDI_B.pem
AWS_Cloud/FicherosLambda/: login_youtube.py  register_youtube.py
AWS_Cloud/Ficheros_Front_END/: comentario_voto.html  copias.html  dashboard.html  index.html  show_videos.html  upload_videos.html  video.html
AWS_Cloud/Ficheros_Front_END/src/: comentario_voto.js  dashboard.js  login.js  show_videos.js  upload.js  video.js
AWS_Cloud/Ficheros_frontEnd/: dashboard.html  index.html  login.html  youtube.html
AWS_Cloud/Ficheros_frontEnd/src/: dashboard.js  data_login.js  login.js
AWS_Cloud/docker_youtube/: Dockerfile  keys_gateway.php  lambda_gateway.php  start.sh
Kubernetes/: README.md
Kubernetes/docker_youtube/: Dockerfile  comandos_rapidos  mariadbApache.yaml  start.sh  youtubeDPL.yaml
Kubernetes/scripts_kubernetes/: kub_install.sh  kub_reset.sh
Kubernetes/server/: Dockerfile  serverMultmatrixDeployment.yaml  server_multMatrix  servermultmatrix_service.yaml
Kubernetes/server_file/: Dockerfile  failsave.sh  fileManager_deployment.yaml  fileManager_service.yaml  genera_docker.sh  serverFileManager
Kubernetes/server_matrix/: Dockerfile  failsave.sh  multmatrix_deployment.yaml  multmatrix_service.yaml  server_multMatrix
Kubernetes/youtube_cloud/: login.html  login.js
fileManager/clientFileManager/: CMakeCache.txt  CMakeLists.txt  filemanager_stub.cpp  filemanager_stub.h  local_env.cpp  local_env.h  main_fm.cpp  utils.h
fileManager/clientFileManager/directorio_local/: donquijote.txt
fileManager/serverFileManager/: CMakeLists.txt  filemanager_imp.cpp  filemanager_imp.h  filemanager_stub.cpp  fliemanager_imp.cpp  serverMain.cpp
fileManager/serverFileManager/directorio/: fich2.txt
multMatrix/clienteMultmatrix/: CMakeLists.txt  main_multMatrix.cpp  matrix_h.h  multmatrix_stub.cpp  multmatrix_stub.h
multMatrix/serverMultmatrix/: CMakeLists.txt  matrix_h.h  multmatrix.cpp  multmatrix.h  multmatrix_imp.cpp  multmatrix_imp.h  resultado.txt  serverMain.cpp
(+9 files in other folders)
